[gd_scene load_steps=8 format=3 uid="uid://b13lnfkjbafkj"]

[ext_resource type="Theme" uid="uid://ehplgpp70vxa" path="res://assets/themes/card_ui-dracula.tres" id="1_0qmlq"]
[ext_resource type="Script" path="res://core/ui/card_ui_only_qam/card_ui_only_qam.gd" id="2_3ptao"]
[ext_resource type="PackedScene" uid="uid://bxnb8t7i08vma" path="res://core/systems/input/only_qam_input_manager.tscn" id="3_klhmb"]
[ext_resource type="PackedScene" uid="uid://cbboox5bujlx1" path="res://core/systems/launcher/launch_manager.tscn" id="4_b1ok4"]
[ext_resource type="PackedScene" uid="uid://d2jiecrd5sw4s" path="res://core/ui/card_ui/settings/settings_menu.tscn" id="5_4sdt1"]
[ext_resource type="PackedScene" uid="uid://cwarv58ju0sow" path="res://core/ui/card_ui/gamepad/gamepad_settings.tscn" id="6_oddte"]
[ext_resource type="PackedScene" uid="uid://hroo3ll4inrb" path="res://core/ui/card_ui/qam/quick_access_menu.tscn" id="7_e54f8"]

[node name="OnlyQamMain" type="Control" groups=["main"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0qmlq")
script = ExtResource("2_3ptao")

[node name="InputManager" parent="." instance=ExtResource("3_klhmb")]

[node name="LaunchManager" parent="." instance=ExtResource("4_b1ok4")]

[node name="MenuContent" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AboveContextBarMargin" type="MarginContainer" parent="MenuContent"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 40

[node name="SettingsMenu" parent="MenuContent/AboveContextBarMargin" instance=ExtResource("5_4sdt1")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="GamepadSettings" parent="MenuContent/AboveContextBarMargin" instance=ExtResource("6_oddte")]
visible = false
layout_mode = 2

[node name="MenuContainer" type="MarginContainer" parent="MenuContent"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 70

[node name="QuickAccessMenu" parent="MenuContent/MenuContainer" instance=ExtResource("7_e54f8")]
unique_name_in_owner = true
visible = false
layout_mode = 2
